Source/WebCore/Modules/streams/StreamInternals.js
@@ -105,6 +105,9 @@ function dequeueValue(queue)
 
     const record = queue.content.@shift();
     queue.size -= record.size;
+    // As described by spec, below case may occur due to rounding errors.
+    if (queue.size < 0)
+        queue.size = 0;
     return record.value;
 }
 
